--- a/inventory.css
+++ b/inventory.css
@@ -53,8 +53,16 @@ label{
 }
 
 input{
-    height: 40px;
-    padding: 10px;
+    /* height: 40px;
+    padding: 10px; */
+
+    background: #2a2a40;
+    color: #fff;
+    border: none;
+    padding: 0.75rem;
+    margin-bottom: .1rem;
+    border-radius: 0.5rem;
+    font-size: 1rem;
 }
 
 #submit{
@@ -75,27 +83,37 @@ input{
 
 .inventory-footer{
     padding: 20px;
+    display: flex;
+    justify-content: space-between;
 }
 
 .product-display{
     color: rgb(147, 147, 190);
     border-bottom: 1px solid black;
+    border-radius: 4px;
     display: grid;
+    justify-items: center;
+    align-items: center;
     grid-template-columns: 1fr 1fr 1fr 1fr;
     margin-top: 10px;
     padding-bottom: 10px;
 }
 
 .delete{
-    height: 30px;
-    width: 80px;
-    font-weight: bolder;
-    border-radius: 5px;
+    background-color: #ff4d4f;
+    color: white;
     border: none;
+    border-radius: 0.5rem;
+    padding: 0.5rem 1rem;
+    cursor: pointer;
+    transition: background 0.2s ease;
 }
 
 .delete:hover{
-    background-color: red;
-    border: none;
-    transition: .08s;
+    background-color: #d9363e;
+}
+
+img{
+    height: 25px;
+    width: 25px;
 }
